= Changelog
:imagesdir: resources/images/
:toc: left
:toclevels: 4
:toc-class: toc2
:icons: font
:iconfont-cdn: //cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css
:stylesdir: resources/style/
:stylesheet: asciidoctor.css
:description: Services Configuration
:keywords: documentation, NSL, change log
:links:
:numbered:

== v 1.0234
* NSL-3831: First draft tree synonymy auto-update functionality for author and reference
* NSL-3845: Fix ability to delete comments and distribution from services
* Fix concurrancy issues with grails jobs
* Changes to Search endpoint to avoid logs from filling up (WIP)

== v 1.0233
* Fixed font awesome icons for protologue and images
* Fixed classification in APC view to be a popup
* Fix error logging from going to STDOUT instead of log file
* NSL-3811: Services will now re-synchronize with mapper token
* NSL-3827: Added a new button and collapsible search interface to name check results screen
* NSL-3844: Fixed arrows in datepicker. Setup logging based on environment
* Fix the classification to be a popup instead of displaying online; Need to fix new line characters
* Fixed bugs in Tree saves
* Added additional admin functions to run from services
* Fix names and links on exports tabs
* Add validations to run db functions from admin screen
* Change read timeouts to work on cloud
* NSL-3989: Fix Tree distribution entries not saving
* NSL-4003: Optimize tree distribution

== v 1.0232
* NSL-3661 Fixed the broken tree and taxon URLs from editor to services
* NSL-3659: Renamed the view name to match controller action
* NSL-3702: Elements missing on tree action; Fix padding and removed box layout
* NSL-3705: Fixed the icons in the timeline
* NSL-3589: Swapped the unicode character ⇅ with fa icon
* NSL-3705: Fixed the icons in the timeline
* NSL-3589: Swapped the unicode character ⇅ with fa icon
* NSL-3729: Fixed the role to match for deleting comments and distribution from tree elements