@@ -245,8 +245,68 @@ div.indented div.tr.level13 {
     padding-left: 13em;
 }
 
-div.indented div.tr.level14 {
-    padding-left: 14em;
+div.indented div.tr.level15 {
+    padding-left: 15em;
+}
+
+div.indented div.tr.level16 {
+    padding-left: 16em;
+}
+
+div.indented div.tr.level17 {
+    padding-left: 17em;
+}
+
+div.indented div.tr.level18 {
+    padding-left: 18em;
+}
+
+div.indented div.tr.level19 {
+    padding-left: 19em;
+}
+
+div.indented div.tr.level20 {
+    padding-left: 20em;
+}
+
+div.indented div.tr.level21 {
+    padding-left: 21em;
+}
+
+div.indented div.tr.level22 {
+    padding-left: 22em;
+}
+
+div.indented div.tr.level23 {
+    padding-left: 23em;
+}
+
+div.indented div.tr.level24 {
+    padding-left: 24em;
+}
+
+div.indented div.tr.level25 {
+    padding-left: 25em;
+}
+
+div.indented div.tr.level26 {
+    padding-left: 26em;
+}
+
+div.indented div.tr.level27 {
+    padding-left: 27em;
+}
+
+div.indented div.tr.level28 {
+    padding-left: 28em;
+}
+
+div.indented div.tr.level29 {
+    padding-left: 29em;
+}
+
+div.indented div.tr.level30 {
+    padding-left: 30em;
 }
 
 /* add links to div.tr line by wrapping it with another div */
